--- a/progect/css/main.css
+++ b/progect/css/main.css
@@ -4,7 +4,6 @@
     height: 1536px;
 }
 
-
 .main-heading {
     font-family: 'Roboto', Arial, sans-serif;
     font-style: normal;
@@ -13,73 +12,25 @@
     line-height: 1.17;
 }
 
-.class-photo {
-    max-width: 523px;
-    height: auto;
-}
-
-.second-heading {
-    font-family: 'Roboto', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.2;
-    display: flex;
-    align-items: center;
-}
-
-.intro-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.intro-aside {
-    font-family: 'Lobster', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 45px;
-    color: rgba(100, 100, 100, 1);
-}
-
-.intro-text {
-    max-width: 634px;
-    font-family: 'Roboto', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
-}
-
-em {
-    color: #CF5510;
-    font-style: italic;
-}
-
-.discribe {
-    display: flex;
-}
-
 .main-list {
     display: flex;
-    height: 1536px;
     flex-wrap: wrap;
     align-content: space-between;
     justify-content: space-between;
+    height: 1536px;
 }
 
-.main-card {
+.main-list-link-card {
     display: flex;
     flex-direction: column;
 }
-
 
 .name {
     align-self: center;
     margin: 0%;
 }
 
-.main-card_link {
+.main-list-link {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,7 +39,7 @@ em {
     height: 336px;
 }
 
-.card-name {
+.main-list-link-card-name {
     font-weight: 600;
     font-style: normal;
     line-height: 24px;
@@ -96,7 +47,7 @@ em {
     color: #3B82F6;
 }
 
-.card-price {
+.main-list-link-card-prise {
     font-weight: 600;
     font-style: normal;
     font-size: 18px;
@@ -105,8 +56,8 @@ em {
     color: #1E293B;
 }
 
-.card-adress,
-.card-date {
+.main-list-link-card-adress,
+.main-list-link-card-date {
     font-weight: 400;
     font-style: normal;
     font-size: 14px;
